vue-boolzapp es3

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                                     </div>
                                     <div class="col-6">
                                         <div class="fumetto-verde">
-                                            <div class="fumetto-verde-text">Tutto fatto!</div>
+                                            <div class="fumetto-verde-text">Hai portato a spasso il cane ?</div>
+                                            <div class="fumetto-verde-text">Ricordati di dargli da mangiare</div>
                                         </div>
                                     </div>
                                 </div>
