vue-boolzapp es4

--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
                                     </div>
                                     <div class="col-6">
                                         <div class="fumetto-verde">
-                                            <div class="fumetto-verde-text">Hai portato a spasso il cane ?</div>
+                                            <div class="fumetto-verde-text">
+                                                <p>Hai portato a spasso il cane ?</p>
+                                                <div>10/01/2020 16:15:22</div>
+                                            </div>
                                             <div class="fumetto-verde-text">Ricordati di dargli da mangiare</div>
                                         </div>
                                     </div>
